--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,10 @@
-*.sln.docstates
-*.suo
-*.user
-*.userosscache
-*.sln.ide
-*.ps1.log
+.vs
+*.dll
+*.pdb
 *.zip
-*.ps1.error
-.vs/*
+packages
 Module.Modified.xml
-
-# Build results
-**/[Dd]ebug/
-**/[Dd]ebugPublic/
-**/[Rr]elease/
-**/[Rr]eleases/
-**/x64/
-**/x86/
-**/build/
-**/bld/
-**/[Bb]in/
-**/[Oo]bj/
-
-# NuGet
-*.nupkg
-**/packages/*
-!**/packages/build/
-.idea/
+Decisions.Docusign.TestSuite/bin/
+Decisions.Docusign.TestSuite/obj/
+Decisions.Docusign/bin/
+Decisions.Docusign/obj/
